[gd_scene load_steps=25 format=2]

[ext_resource path="res://textures/icons/constitytion.png" type="Texture" id=1]
[ext_resource path="res://textures/icons/strenght.png" type="Texture" id=2]
[ext_resource path="res://gui/NullSlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/icons/wisdom.png" type="Texture" id=4]
[ext_resource path="res://gui/Equipment.gd" type="Script" id=5]
[ext_resource path="res://gui/Slot.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/icons/armor.png" type="Texture" id=8]
[ext_resource path="res://textures/icons/necklace.png" type="Texture" id=10]
[ext_resource path="res://textures/icons/sword.png" type="Texture" id=11]
[ext_resource path="res://textures/icons/close.png" type="Texture" id=12]
[ext_resource path="res://textures/icons/plus.png" type="Texture" id=14]
[ext_resource path="res://textures/icons/intelligence.png" type="Texture" id=16]
[ext_resource path="res://textures/icons/gauntlet.png" type="Texture" id=17]
[ext_resource path="res://textures/icons/agility.png" type="Texture" id=18]
[ext_resource path="res://textures/icons/helmet.png" type="Texture" id=20]
[ext_resource path="res://textures/icons/cape.png" type="Texture" id=21]
[ext_resource path="res://textures/icons/belt.png" type="Texture" id=22]
[ext_resource path="res://textures/icons/boots.png" type="Texture" id=24]
[ext_resource path="res://textures/icons/shoulders.png" type="Texture" id=25]
[ext_resource path="res://textures/icons/breeches.png" type="Texture" id=26]
[ext_resource path="res://textures/icons/earrings.png" type="Texture" id=27]
[ext_resource path="res://textures/icons/ring.png" type="Texture" id=28]
[ext_resource path="res://textures/icons/shield.png" type="Texture" id=29]
[ext_resource path="res://textures/icons/amulet.png" type="Texture" id=30]

[node name="Equipment" type="PanelContainer"]
margin_right = 400.0
margin_bottom = 242.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 9.0
margin_top = 7.0
margin_right = 423.0
margin_bottom = 341.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Stats" type="PanelContainer" parent="HBoxContainer"]
margin_right = 172.0
margin_bottom = 334.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Stats"]
margin_left = 7.0
margin_top = 7.0
margin_right = 165.0
margin_bottom = 327.0

[node name="Name" type="Label" parent="HBoxContainer/Stats/VBoxContainer"]
margin_right = 158.0
margin_bottom = 14.0
text = "Emaleth"
align = 1
valign = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Stats/VBoxContainer"]
margin_top = 18.0
margin_right = 158.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer"]
margin_top = 26.0
margin_right = 158.0
margin_bottom = 74.0
text = "some texct here, ameybe secriprion or something"
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Stats/VBoxContainer"]
margin_top = 170.0
margin_right = 158.0
margin_bottom = 320.0
size_flags_vertical = 10
alignment = 2

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 4.0

[node name="Strenght" type="HBoxContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 158.0
margin_bottom = 28.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatIcon" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght/MarginContainer"]
self_modulate = Color( 0.933333, 0.439216, 0.0392157, 1 )
margin_left = 3.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght"]
margin_left = 24.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "<stat_name>"
valign = 1

[node name="Q" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "000"
align = 2
valign = 1

[node name="Add" type="Button" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Strenght/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dexterity" type="HBoxContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 158.0
margin_bottom = 52.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatIcon" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity/MarginContainer"]
self_modulate = Color( 0.976471, 0.886275, 0, 1 )
margin_left = 3.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity"]
margin_left = 24.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "<stat_name>"
valign = 1

[node name="Q" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "000"
align = 2
valign = 1

[node name="Add" type="Button" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Dexterity/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Constitution" type="HBoxContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 158.0
margin_bottom = 76.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatIcon" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution/MarginContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 3.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution"]
margin_left = 24.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "<stat_name>"
valign = 1

[node name="Q" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "000"
align = 2
valign = 1

[node name="Add" type="Button" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Constitution/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intelligence" type="HBoxContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 158.0
margin_bottom = 100.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatIcon" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence/MarginContainer"]
self_modulate = Color( 0.262745, 0.0313726, 0.890196, 1 )
margin_left = 3.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 16 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence"]
margin_left = 24.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "<stat_name>"
valign = 1

[node name="Q" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "000"
align = 2
valign = 1

[node name="Add" type="Button" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Intelligence/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wisdom" type="HBoxContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 158.0
margin_bottom = 124.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatIcon" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom/MarginContainer"]
self_modulate = Color( 0.0313726, 0.945098, 0.960784, 1 )
margin_left = 3.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom"]
margin_left = 24.0
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "<stat_name>"
valign = 1

[node name="Q" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "000"
align = 2
valign = 1

[node name="Add" type="Button" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer/Wisdom/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 158.0
margin_bottom = 132.0

[node name="PointsLabel" type="Label" parent="HBoxContainer/Stats/VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 158.0
margin_bottom = 150.0
size_flags_vertical = 0
text = "remaining points: 5"
align = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 176.0
margin_right = 180.0
margin_bottom = 334.0

[node name="Eq" type="PanelContainer" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 414.0
margin_bottom = 334.0

[node name="EquipmentSlots" type="VBoxContainer" parent="HBoxContainer/Eq"]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 327.0

[node name="Jewellry" type="GridContainer" parent="HBoxContainer/Eq/EquipmentSlots"]
margin_right = 216.0
margin_bottom = 40.0
size_flags_horizontal = 4
columns = 5

[node name="Ring2" parent="HBoxContainer/Eq/EquipmentSlots/Jewellry" instance=ExtResource( 6 )]
icon = ExtResource( 28 )

[node name="Earring2" parent="HBoxContainer/Eq/EquipmentSlots/Jewellry" instance=ExtResource( 6 )]
margin_left = 44.0
margin_right = 84.0
icon = ExtResource( 27 )

[node name="Necklace" parent="HBoxContainer/Eq/EquipmentSlots/Jewellry" instance=ExtResource( 6 )]
margin_left = 88.0
margin_right = 128.0
icon = ExtResource( 10 )

[node name="Earring1" parent="HBoxContainer/Eq/EquipmentSlots/Jewellry" instance=ExtResource( 6 )]
margin_left = 132.0
margin_right = 172.0
icon = ExtResource( 27 )

[node name="Ring1" parent="HBoxContainer/Eq/EquipmentSlots/Jewellry" instance=ExtResource( 6 )]
margin_left = 176.0
margin_right = 216.0
icon = ExtResource( 28 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Eq/EquipmentSlots"]
margin_top = 44.0
margin_right = 216.0
margin_bottom = 48.0

[node name="Main" type="GridContainer" parent="HBoxContainer/Eq/EquipmentSlots"]
margin_left = 44.0
margin_top = 52.0
margin_right = 172.0
margin_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 4
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NullSlot15" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 3 )]

[node name="Head" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 44.0
margin_right = 84.0
icon = ExtResource( 20 )

[node name="NullSlot2" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 3 )]
margin_left = 88.0
margin_right = 128.0

[node name="Cape" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_top = 44.0
margin_bottom = 84.0
icon = ExtResource( 21 )

[node name="UpperBody" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 44.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 84.0
icon = ExtResource( 8 )

[node name="Shoulders" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 88.0
margin_top = 44.0
margin_right = 128.0
margin_bottom = 84.0
icon = ExtResource( 25 )

[node name="Hands" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_top = 88.0
margin_bottom = 128.0
icon = ExtResource( 17 )

[node name="Belt" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 44.0
margin_top = 88.0
margin_right = 84.0
margin_bottom = 128.0
icon = ExtResource( 22 )

[node name="NullSlot3" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 88.0
margin_right = 128.0
margin_bottom = 128.0

[node name="MainHand" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_top = 132.0
margin_bottom = 172.0
icon = ExtResource( 11 )

[node name="LowerBody" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 44.0
margin_top = 132.0
margin_right = 84.0
margin_bottom = 172.0
icon = ExtResource( 26 )

[node name="OffHand" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 88.0
margin_top = 132.0
margin_right = 128.0
margin_bottom = 172.0
icon = ExtResource( 29 )

[node name="NullSlot5" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 3 )]
margin_top = 176.0
margin_bottom = 216.0

[node name="Feet" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 6 )]
margin_left = 44.0
margin_top = 176.0
margin_right = 84.0
margin_bottom = 216.0
icon = ExtResource( 24 )

[node name="NullSlot6" parent="HBoxContainer/Eq/EquipmentSlots/Main" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 216.0

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Eq/EquipmentSlots"]
margin_top = 272.0
margin_right = 216.0
margin_bottom = 276.0

[node name="Amulets" type="GridContainer" parent="HBoxContainer/Eq/EquipmentSlots"]
margin_left = 44.0
margin_top = 280.0
margin_right = 172.0
margin_bottom = 320.0
size_flags_horizontal = 4
columns = 3

[node name="Amulet2" parent="HBoxContainer/Eq/EquipmentSlots/Amulets" instance=ExtResource( 6 )]
icon = ExtResource( 30 )

[node name="Amulet3" parent="HBoxContainer/Eq/EquipmentSlots/Amulets" instance=ExtResource( 6 )]
margin_left = 44.0
margin_right = 84.0
icon = ExtResource( 30 )

[node name="Amulet1" parent="HBoxContainer/Eq/EquipmentSlots/Amulets" instance=ExtResource( 6 )]
margin_left = 88.0
margin_right = 128.0
icon = ExtResource( 30 )

[node name="Close" type="Button" parent="."]
margin_left = 405.0
margin_top = 7.0
margin_right = 425.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Close"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="sort_children" from="." to="." method="_on_Equipment_sort_children"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
